--- a/theme/discover-qihe/academic-team.html
+++ b/theme/discover-qihe/academic-team.html
@@ -1,4 +1,40 @@
-<div class="max-w-4xl mx-auto p-6 text-muted mt-6">
-  <h1 class="font-primary text-4xl md:text-5xl font-bold text-gray-800 mt-6 mb-2">Academic Team</h1>
-  <p></p>
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<style>
+    :root {
+        --color-background: hsl(0 0% 98%);
+        --color-text: hsl(222 40% 15%);
+        --color-surface: hsl(0 0% 93%);
+        --color-surface-1: hsl(0 0% 87%);
+        --color-surface-2: hsl(0 0% 82%);
+        --color-muted: #424242;
+        --color-error: hsl(0 70% 58%);
+        --color-success: hsl(142 50% 45%);
+        --color-powder-blue: #edf5ff;
+        --color-brand-primary: #78256f;
+        --color-brand-primary-yellow: #f3bd1c;
+        --color-brand-primary-black: #111111;
+        --color-brand-blue-1: #093a73;
+        --color-brand-blue-2: #124380;
+        --color-brand-blue-3: #1d4d8b;
+        --color-brand-blue-4: #255494;
+        --color-brand-yellow-1: #ef7c00;
+        --color-brand-yellow-2: #f2a510;
+        --color-brand-yellow-3: #f3bd1c;
+        --color-brand-yellow-4: #f4d526;
+        --font-primary: 'League Spartan', serif;
+        --font-secondary: 'Poppins', serif;
+    }
+</style>
+<div class="container-md mt-6 text-muted">
+  <h1 class="text-brand-primary-black mt-4 mb-2 font-primary text-4xl font-bold">The Academic Team</h1>
+  <p>
+    Our academic team comprises highly qualified professionals with both
+    industry and academic experience, dedicated to delivering
+    student-centric education that’s relevant and impactful.
+  </p>
+  <p class="mt-2">
+    <a href="#" class="text-brand-primary underline hover:text-brand-blue-4 transition-all">
+      View Academic Staff Profiles
+    </a>
+  </p>
 </div>
