--- a/theme/discover-qihe/faqs.html
+++ b/theme/discover-qihe/faqs.html
@@ -1,4 +1,39 @@
-<div class="max-w-4xl mx-auto p-6 text-muted mt-6">
-  <h1 class="font-primary text-4xl md:text-5xl font-bold text-gray-800 mt-6 mb-2">FAQs</h1>
-  
-</div>
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<style>
+    :root {
+        --color-background: hsl(0 0% 98%);
+        --color-text: hsl(222 40% 15%);
+        --color-surface: hsl(0 0% 93%);
+        --color-surface-1: hsl(0 0% 87%);
+        --color-surface-2: hsl(0 0% 82%);
+        --color-muted: #424242;
+        --color-error: hsl(0 70% 58%);
+        --color-success: hsl(142 50% 45%);
+        --color-powder-blue: #edf5ff;
+        --color-brand-primary: #78256f;
+        --color-brand-primary-yellow: #f3bd1c;
+        --color-brand-primary-black: #111111;
+        --color-brand-blue-1: #093a73;
+        --color-brand-blue-2: #124380;
+        --color-brand-blue-3: #1d4d8b;
+        --color-brand-blue-4: #255494;
+        --color-brand-yellow-1: #ef7c00;
+        --color-brand-yellow-2: #f2a510;
+        --color-brand-yellow-3: #f3bd1c;
+        --color-brand-yellow-4: #f4d526;
+        --font-primary: 'League Spartan', serif;
+        --font-secondary: 'Poppins', serif;
+    }
+</style>
+<div className="container-md">
+      <h1 className="w-fit mx-auto text-center">
+        Frequently Asked Questions
+      </h1>
+
+      <p className="text-muted max-w-xl text-center mx-auto">
+        Find answers to common questions about admissions, courses, support
+        services, and life at QIHE.
+      </p>
+
+      <!-- {accrodin} -->
+    </div>
