--- a/theme/discover-qihe/mission-and-vision.html
+++ b/theme/discover-qihe/mission-and-vision.html
@@ -1,4 +1,59 @@
-<div class="max-w-4xl mx-auto p-6 text-muted mt-6">
-  <h1 class="font-primary text-4xl md:text-5xl font-bold text-gray-800 mt-6 mb-2">Mission and Vision</h1>
-  <p></p>
-</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <style>
+    :root {
+      --color-background: hsl(0 0% 98%);
+      --color-text: hsl(222 40% 15%);
+      --color-surface: hsl(0 0% 93%);
+      --color-surface-1: hsl(0 0% 87%);
+      --color-surface-2: hsl(0 0% 82%);
+      --color-muted: #424242;
+      --color-error: hsl(0 70% 58%);
+      --color-success: hsl(142 50% 45%);
+      --color-powder-blue: #edf5ff;
+      --color-brand-primary: #78256f;
+      --color-brand-primary-yellow: #f3bd1c;
+      --color-brand-primary-black: #111111;
+      --color-brand-blue-1: #093a73;
+      --color-brand-blue-2: #124380;
+      --color-brand-blue-3: #1d4d8b;
+      --color-brand-blue-4: #255494;
+      --color-brand-yellow-1: #ef7c00;
+      --color-brand-yellow-2: #f2a510;
+      --color-brand-yellow-3: #f3bd1c;
+      --color-brand-yellow-4: #f4d526;
+      --font-primary: 'League Spartan', serif;
+      --font-secondary: 'Poppins', serif;
+    }
+    .font-primary { font-family: var(--font-primary); }
+    .text-brand-primary { color: var(--color-brand-primary); }
+    .text-brand-primary-black { color: var(--color-brand-primary-black); }
+    .bg-brand-primary\/10 { background-color: rgba(120, 37, 111, 0.1); }
+    .border-muted\/50 { border-color: #42424280; }
+  </style>
+</head>
+<body class="bg-[var(--color-background)] text-[var(--color-text)]">
+  <div class="max-w-6xl mx-auto p-6 mt-6">
+    <h1 class="font-primary text-4xl md:text-5xl font-bold text-brand-primary-black mt-6 mb-6">Our Mission and Vision</h1>
+  </div>
+  <div class="max-w-6xl mx-auto p-6 grid md:grid-cols-2 gap-4">
+    <div class="border border-muted/50 shadow rounded-xl p-6 flex flex-col items-start">
+      <div class="w-20 h-20 aspect-square bg-brand-primary/10 rounded-full grid place-items-center mb-4">
+        <i class="fi fi-rr-bullseye-arrow text-5xl text-brand-primary"></i>
+      </div>
+      <h2 class="font-primary text-2xl md:text-3xl font-bold text-brand-primary-black mt-4 mb-2">Our Mission</h2>
+      <p class="text-muted">
+        QIHE provides an exceptional higher education experience for students from all walks of life. We achieve this by fostering a dynamic and creative learning environment where education is an active and lifelong journey. Our mission is to prepare students to make meaningful contributions to their chosen professions and to society.
+      </p>
+    </div>
+    <div class="border border-muted/50 shadow rounded-xl p-6 flex flex-col items-start">
+      <div class="w-20 h-20 aspect-square bg-brand-primary/10 rounded-full grid place-items-center mb-4">
+        <i class="fi fi-rr-binoculars text-5xl text-brand-primary"></i>
+      </div>
+      <h2 class="font-primary text-2xl md:text-3xl font-bold text-brand-primary-black mt-4 mb-2">Our Vision</h2>
+      <p class="text-muted">
+        At QIHE, we aspire to transform students' lives and open doors to professional opportunities through the delivery of quality higher education. Our vision is to create an environment that fosters intellectual curiosity, critical thinking, and the cultivation of practical skills and humane values, empowering students to thrive in their personal and professional lives.
+      </p>
+    </div>
+  </div>
+
