--- a/theme/discover-qihe/our-core-values.html
+++ b/theme/discover-qihe/our-core-values.html
@@ -1,50 +1,65 @@
-<div className=" container-md mt-6 text-muted">
-      <h1 className="text-brand-primary-black mt-4 mb-2" level={1}>
-        Our Core Values
-      </h1>
-      <p className="mb-2">
-        At QIHE, our core values guide us in achieving our vision and mission:
-      </p>
-      </p>
-      <ul className="list-decimal pl-6 space-y-1">
-        <li>
-          <strong>Academic Excellence:</strong> We are dedicated to delivering
-          education that empowers students and prepares them for success in a
-          global workforce.
-        </li>
-        <li>
-          <strong>Equity and Inclusivity:</strong> We believe in providing
-          equitable access to quality higher education, fostering an inclusive
-          environment for all.
-        </li>
-        <li>
-          <strong>Community Engagement:</strong> We strive to make a positive
-          impact on our local community and beyond through meaningful
-          contributions.
-        </li>
-        <li>
-          <strong>Integrity:</strong> We uphold the highest standards of
-          academic and operational integrity, ensuring transparency, compliance,
-          and consistency.
-        </li>
-        <li>
-          <strong>Accountability:</strong> We take responsibility for our
-          actions and their impact, maintaining the trust of our students,
-          stakeholders, and community.
-        </li>
-        <li>
-          <strong>Sustainability:</strong> We are committed to financial and
-          environmental sustainability, integrating responsible practices across
-          our operations and curriculum.
-        </li>
-        <li>
-          <strong>Adaptability:</strong> We embrace innovation and remain
-          flexible to meet the challenges of a dynamic, ever-changing world.
-        </li>
-        <li>
-          <strong>Global Outlook:</strong> We cultivate an international
-          perspective in our programs and operations, fostering collaboration
-          and global connections.
-        </li>
-      </ul>
-    </div>
+ <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <style>
+    :root {
+      --color-background: hsl(0 0% 98%);
+      --color-text: hsl(222 40% 15%);
+      --color-surface: hsl(0 0% 93%);
+      --color-surface-1: hsl(0 0% 87%);
+      --color-surface-2: hsl(0 0% 82%);
+      --color-muted: #424242;
+      --color-error: hsl(0 70% 58%);
+      --color-success: hsl(142 50% 45%);
+      --color-powder-blue: #edf5ff;
+      --color-brand-primary: #78256f;
+      --color-brand-primary-yellow: #f3bd1c;
+      --color-brand-primary-black: #111111;
+      --color-brand-blue-1: #093a73;
+      --color-brand-blue-2: #124380;
+      --color-brand-blue-3: #1d4d8b;
+      --color-brand-blue-4: #255494;
+      --color-brand-yellow-1: #ef7c00;
+      --color-brand-yellow-2: #f2a510;
+      --color-brand-yellow-3: #f3bd1c;
+      --color-brand-yellow-4: #f4d526;
+      --font-primary: 'League Spartan', serif;
+      --font-secondary: 'Poppins', serif;
+    }
+    .font-primary { font-family: var(--font-primary); }
+    .text-brand-primary { color: var(--color-brand-primary); }
+    .text-brand-primary-black { color: var(--color-brand-primary-black); }
+    .bg-brand-primary\/10 { background-color: rgba(120, 37, 111, 0.1); }
+    .border-muted\/50 { border-color: #42424280; }
+  
+  </style>
+<div class="container-md mt-6 text-muted">
+  <h1 class="text-brand-primary-black mt-4 mb-2 text-4xl md:text-5xl font-bold">Our Core Values</h1>
+  <p class="mb-2">
+    At QIHE, our core values guide us in achieving our vision and mission:
+  </p>
+  <ol class="list-decimal pl-6 space-y-1">
+    <li>
+      <strong>Academic Excellence:</strong> We are dedicated to delivering education that empowers students and prepares them for success in a global workforce.
+    </li>
+    <li>
+      <strong>Equity and Inclusivity:</strong> We believe in providing equitable access to quality higher education, fostering an inclusive environment for all.
+    </li>
+    <li>
+      <strong>Community Engagement:</strong> We strive to make a positive impact on our local community and beyond through meaningful contributions.
+    </li>
+    <li>
+      <strong>Integrity:</strong> We uphold the highest standards of academic and operational integrity, ensuring transparency, compliance, and consistency.
+    </li>
+    <li>
+      <strong>Accountability:</strong> We take responsibility for our actions and their impact, maintaining the trust of our students, stakeholders, and community.
+    </li>
+    <li>
+      <strong>Sustainability:</strong> We are committed to financial and environmental sustainability, integrating responsible practices across our operations and curriculum.
+    </li>
+    <li>
+      <strong>Adaptability:</strong> We embrace innovation and remain flexible to meet the challenges of a dynamic, ever-changing world.
+    </li>
+    <li>
+      <strong>Global Outlook:</strong> We cultivate an international perspective in our programs and operations, fostering collaboration and global connections.
+    </li>
+  </ol>
+</div>
