--- a/theme/discover-qihe/our-core-team.html
+++ b/theme/discover-qihe/our-core-team.html
@@ -1,4 +1,58 @@
-<div class="max-w-4xl mx-auto p-6 text-muted mt-6">
-  <h1 class="font-primary text-4xl md:text-5xl font-bold text-gray-800 mt-6 mb-2">Our Core Team</h1>
-  <p></p>
+ <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <style>
+    :root {
+      --color-background: hsl(0 0% 98%);
+      --color-text: hsl(222 40% 15%);
+      --color-surface: hsl(0 0% 93%);
+      --color-surface-1: hsl(0 0% 87%);
+      --color-surface-2: hsl(0 0% 82%);
+      --color-muted: #424242;
+      --color-error: hsl(0 70% 58%);
+      --color-success: hsl(142 50% 45%);
+      --color-powder-blue: #edf5ff;
+      --color-brand-primary: #78256f;
+      --color-brand-primary-yellow: #f3bd1c;
+      --color-brand-primary-black: #111111;
+      --color-brand-blue-1: #093a73;
+      --color-brand-blue-2: #124380;
+      --color-brand-blue-3: #1d4d8b;
+      --color-brand-blue-4: #255494;
+      --color-brand-yellow-1: #ef7c00;
+      --color-brand-yellow-2: #f2a510;
+      --color-brand-yellow-3: #f3bd1c;
+      --color-brand-yellow-4: #f4d526;
+      --font-primary: 'League Spartan', serif;
+      --font-secondary: 'Poppins', serif;
+    }
+    .font-primary { font-family: var(--font-primary); }
+    .text-brand-primary { color: var(--color-brand-primary); }
+    .text-brand-primary-black { color: var(--color-brand-primary-black); }
+    .bg-brand-primary\/10 { background-color: rgba(120, 37, 111, 0.1); }
+    .border-muted\/50 { border-color: #42424280; }
+  </style>
+<div class=" p-6 text-muted mt-6 container-md">
+  <h1 class="text-4xl md:text-5xl font-bold text-brand-primary-black mt-4 mb-2">Meet the Quantum Family</h1>
+  <p>
+    QIHE’s governance framework includes several key bodies that work collaboratively to uphold our commitment to academic excellence, integrity, and student achievement.
+  </p>
+  <ul class="list-disc pl-6 space-y-1 mt-2">
+    <li>The Governing Council</li>
+    <li>The Academic Board</li>
+    <li>The Industry and Advisory Committee</li>
+    <li>The Risk and Audit Committee</li>
+  </ul>
+  <p class="mt-2">
+    The Institute is steered by the Governing Council, the Academic Board, and a network of Course and Advisory Committees. These bodies play a pivotal role in ensuring the Institute’s academic standards, industry relevance, and student-focused outcomes.
+  </p>
+  <p class="mt-2">
+    These teams collaborate closely to provide an enriching learning experience, combining innovative teaching, industry insights, and personalized support. At Quantum, we are committed to empowering students with relevant knowledge, skills, and connections they need to thrive in their careers and contribute meaningfully to society.
+  </p>
+  <div class="flex flex-col items-center justify-center mt-6">
+    <img src="/organizational/governance-structure.png" alt="Governance Structure" width="600" height="600" class="md:w-2xl mix-blend-multiply" />
+    <p class="mt-2 w-fit text-center">
+      <a href="/organizational/governance-structure.png" target="_blank" download class="text-brand-primary underline hover:text-brand-blue-4 transition-all">
+        Download Governance Structure &amp; Organizational Diagram
+      </a>
+    </p>
+  </div>
 </div>
