--- a/theme/homepage/newsletter-section.html
+++ b/theme/homepage/newsletter-section.html
@@ -26,10 +26,10 @@
     }
 </style>
 
-<div class="container-sm mx-auto px-4">
+<div class="container-md  px-4">
     <div class="relative rounded-lg overflow-hidden" style="background-image:url('/banner.jpg');background-size:cover;background-position:center">
         <div class="absolute inset-0 z-0 bg-gradient-to-r from-[var(--color-brand-primary)] to-transparent pointer-events-none"></div>
-        <div class="relative z-10 w-full h-full px-5 py-4 text-white">
+        <div class="relative z-10 w-full  px-5 py-4 text-white">
             <h4 class="font-primary font-bold text-xl">Did not find what you want?</h4>
             <h4 class="font-primary font-bold mb-3 text-xl">We are here to help!</h4>
             <p class="text-gray-200 md:max-w-2xl">
