--- a/theme/discover-qihe/discover.html
+++ b/theme/discover-qihe/discover.html
@@ -1,11 +1,8 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Discover QIHE</title>
-	<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+	<head>
+		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+		<link rel="stylesheet" href="/src/app/globals.css">
+	</head>
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 	<style>
 		:root {
@@ -50,8 +47,8 @@
 			flex-shrink: 0;
 		}
 	</style>
-</head>
-<body class="bg-[var(--color-background)] text-[var(--color-text)]">
+
+
 	<div class="max-w-6xl mx-auto p-6">
 		<h1 class=" text-4xl md:text-5xl font-bold text-brand-primary-black mt-6 mb-2">Discover QIHE</h1>
 		<section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
@@ -63,5 +60,4 @@
 					</a>
 		</section>
 	</div>
-</body>
-</html>
+
