--- a/theme/discover-qihe/mission-and-vision.html
+++ b/theme/discover-qihe/mission-and-vision.html
@@ -1,5 +1,8 @@
 
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="/src/app/globals.css">
+  </head>
   <style>
     :root {
       --color-background: hsl(0 0% 98%);
