--- a/theme/homepage/newsletter-section.html
+++ b/theme/homepage/newsletter-section.html
@@ -1,4 +1,7 @@
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="/src/app/globals.css">
+</head>
 <style>
     :root {
         --color-background: hsl(0 0% 98%);
