--- a/theme/v1/discover-qihe/faqs.html
+++ b/theme/v1/discover-qihe/faqs.html
@@ -31,7 +31,7 @@
 <div class="container-md mt-6">
   <h1 class="w-fit mx-auto text-center text-4xl md:text-5xl font-bold text-brand-primary-black mb-2">Frequently Asked Questions</h1>
   <p class="text-muted max-w-xl text-center mx-auto mb-6">
-    Find answers to common questions about admissions, courses, support services, and life at QIHE.
+    Got questions about studying at QIHE? Find answers about admissions, programs, support services, and student visas to help you succeed
   </p>
   <div class="max-w-2xl mx-auto">
     <div class="border-b border-muted/50">
