--- a/theme/v1/futurestudents/admissions.html
+++ b/theme/v1/futurestudents/admissions.html
@@ -73,6 +73,7 @@
     <p>We’re thrilled to have you with us! You’re now ready to begin your journey as a Quantum student. Enroll in your classes, connect with classmates, and dive into campus life.</p>
   </section>
   <section class="mt-4">
-    <p>For more Information: <a href="#" class="text-[var(--color-brand-primary)] underline hover:text-[var(--color-brand-blue-4)] transition-all">QIHE’s Admission Policy</a></p>
+    <p>For more Information:<a href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AJ-mqWkT5w00G5w_-L9PFRw/Policies%20and%20Procedures?dl=0&preview=Admission+Policy+and+Procedure.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1" class="italic underline text-brand-primary">Admission Policy and Procedure</a>
+</p>
   </section>
 </div>
