--- a/theme/v1/homepage/faq-section.html
+++ b/theme/v1/homepage/faq-section.html
@@ -32,7 +32,7 @@
   <div class="container-md mx-auto">
     <h2 class="w-fit mx-auto text-center font-primary font-bold text-3xl md:text-4xl mb-3">Frequently Asked Questions</h2>
     <p class="text-muted max-w-xl text-center mx-auto">
-      Find answers to common questions about admissions, courses, support services, and life at QIHE.
+      Got questions about studying at QIHE? Find answers about admissions, programs, support services, and student visas to help you succeed
     </p>
     <br />
     <div class="max-w-2xl mx-auto">
