--- a/theme/v1.1/campus_info/safety.html
+++ b/theme/v1.1/campus_info/safety.html
@@ -14,7 +14,7 @@
     </p>
     <p class="text-lg text-gray-700 text-center max-w-4xl mx-auto">
       Link to
-      <a href="#" class="text-blue-600 hover:underline italic"
+      <a href="#" class="italic underline text-brand-primary italic"
         >Health and Safety Policy</a
       >.
     </p>
