--- a/theme/v1.1/quck_link/Copyright/copyright.html
+++ b/theme/v1.1/quck_link/Copyright/copyright.html
@@ -18,7 +18,7 @@
       <a
         href="https://www.nsw.gov.au/nsw-government/about-website/copyright"
         target="_blank"
-        class="text-blue-600 hover:underline"
+        class="italic underline text-brand-primary"
       >
         NSW Copyright Resources </a
       >.
