--- a/theme/v1.1/quck_link/careers_at_QIHE/careers_at_QIHE.html
+++ b/theme/v1.1/quck_link/careers_at_QIHE/careers_at_QIHE.html
@@ -16,7 +16,7 @@
 
     <p class="text-gray-700">
       For open positions and application information, please visit our
-      <a href="#" class="text-blue-600 hover:underline"> Careers Portal</a>.
+      <a href="#" class="italic underline text-brand-primary"> Careers Portal</a>.
     </p>
   </div>
 </body>
