--- a/theme/v1.1/quck_link/esos_framework/esos_framework.html
+++ b/theme/v1.1/quck_link/esos_framework/esos_framework.html
@@ -51,7 +51,7 @@
       <a
         href="https://www.education.gov.au/esos-framework"
         target="_blank"
-        class="text-blue-600 hover:underline"
+        class="italic underline text-brand-primary"
       >
         ESOS Framework </a
       >.
