--- a/theme/v1.1/quck_link/privacy_policy/privacy_policy.html
+++ b/theme/v1.1/quck_link/privacy_policy/privacy_policy.html
@@ -19,7 +19,7 @@
       <a
         href="https://www.ipc.nsw.gov.au/privacy"
         target="_blank"
-        class="text-blue-600 hover:underline"
+        class="italic underline text-brand-primary"
       >
         NSW Privacy Resources </a
       >.
