file/folder neaming convension update

--- a/theme/v1.1/our_program/indivusial_program-more-info-Section.html
+++ b/theme/v1.1/our_program/indivusial_program-more-info-Section.html
@@ -9,7 +9,7 @@
       <button
         class="px-6 py-3 text-sm font-medium border-b-2 border-brand-primary text-brand-primary font-semibold"
       >
-        Overview
+        Why Choose This Program?
       </button>
       <button
         class="px-6 py-3 text-sm font-medium border-b-2 border-transparent text-muted hover:text-gray-700 hover:border-gray-300"
@@ -19,7 +19,12 @@
       <button
         class="px-6 py-3 text-sm font-medium border-b-2 border-transparent text-muted hover:text-gray-700 hover:border-gray-300"
       >
-        Career Opportunities
+        Career Outcomes
+      </button>
+      <button
+        class="px-6 py-3 text-sm font-medium border-b-2 border-transparent text-muted hover:text-gray-700 hover:border-gray-300"
+      >
+        Admission Requirements
       </button>
     </div>
     <div class="rounded-lg p-4 bg-surface bg-white shadow">
