--- a/theme/v1.1/course/admissionRequirements.html
+++ b/theme/v1.1/course/admissionRequirements.html
@@ -9,7 +9,7 @@
         finding smart solutions for business challenges.
       </p>
 
-      <h3 class="text-lg font-semibold text-blue-800 mt-6 mb-2">
+      <h3 class="text-lg text-blue-800 mt-6 mb-2">
         Minimum Entry Requirements
       </h3>
 
@@ -29,7 +29,7 @@
       </ul>
 
       <!-- Alternative Pathways -->
-      <h3 class="text-lg font-semibold text-blue-800 mt-6 mb-2">
+      <h3 class="text-lg text-blue-800 mt-6 mb-2">
         Alternative Pathways
       </h3>
       <ul class="list-disc list-outside space-y-1 text-start px-4">
@@ -38,7 +38,7 @@
         <li>Students from disadvantaged or under-represented backgrounds</li>
       </ul>
 
-      <h3 class="text-lg font-semibold text-blue-800 mt-6 mb-2">
+      <h3 class="text-lg text-blue-800 mt-6 mb-2">
         Admission Process
       </h3>
       <ol class="list-decimal list-inside space-y-1 px-4">
