--- a/theme/v1.1/course/learningOutcomes.html
+++ b/theme/v1.1/course/learningOutcomes.html
@@ -12,7 +12,7 @@
         major that they have selected.
       </p>
       <div>
-        <h3 class="text-lg font-semibold text-blue-800 mt-6 mb-2">
+        <h3 class="text-lg text-blue-800 mt-6 mb-2">
           Upon completion of the Bachelor of Business – Accounting program,
           students are expected to:
         </h3>
