--- a/theme/v1/qihe-students/student-platform.html
+++ b/theme/v1/qihe-students/student-platform.html
@@ -18,9 +18,9 @@
 
 \
   <div class="max-w-6xl mx-auto p-6 mt-6 text-muted">
-    <h1 class=" text-4xl md:text-5xl font-bold text-brand-primary-black mb-2">Student Platform</h1>
-    <p>The QIHE Student Platform is your hub for managing your studies. Access course materials, submit assignments, view grades, and stay updated with important announcements.</p>
+    <h1 class=" text-4xl md:text-5xl font-bold text-brand-primary-black mb-2">Learning Management System (LMS)</h1>
+    <p>The QIHE Learning Management System (LMS) is your hub for managing your studies. Access course materials, submit assignments, view grades, and stay updated with important announcements.</p>
     <p class="mt-2">
-      <a href="#" class="text-brand-primary underline hover:text-brand-blue-4 transition-all">Login to the Student Platform</a>
+      <a href="#" class="text-brand-primary underline hover:text-brand-blue-4 transition-all">Login to the Learning Management System (LMS)</a>
     </p>
   </div>
