--- a/theme/v1/discover-qihe/our-core-values.html
+++ b/theme/v1/discover-qihe/our-core-values.html
@@ -65,4 +65,21 @@
       <strong>Global Outlook:</strong> We cultivate an international perspective in our programs and operations, fostering collaboration and global connections.
     </li>
   </ol>
-</div>
+</div> 
+  <div class="max-w-4xl mx-auto px-4 py-12">
+    <h1 class="text-3xl md:text-4xl font-bold mb-6 text-gray-900">
+      Careers at QIHE
+    </h1>
+
+    <p class="text-gray-700 mb-4">
+      Join QIHE and be part of a dynamic, student-focused higher education
+      community. We offer opportunities to grow professionally, contribute to
+      innovative learning, and support student success in a collaborative and
+      inclusive environment.
+    </p>
+
+    <p class="text-gray-700">
+      For open positions and application information, please visit our
+      <a href="#" class="italic underline text-brand-primary"> Careers Portal</a>.
+    </p>
+  </div>
