--- a/theme/v1.1/homepage/qihe-pdf-section.html
+++ b/theme/v1.1/homepage/qihe-pdf-section.html
@@ -26,7 +26,7 @@
       </div>
       <div class="mt-4">
         <a
-          href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AF-HwH0fnWWbpNminvyKYTI/Student%20Information%20Materials?dl=0&preview=Student+Orientation+PPT.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1"
+          href="/resources/student%20orientation.pdf"
           target="_blank"
           rel="noopener noreferrer"
           class="flex items-center justify-center gap-2 w-full px-4 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors duration-200 font-medium text-sm"
