--- a/theme/v1/futurestudents/admissions.html
+++ b/theme/v1/futurestudents/admissions.html
@@ -33,7 +33,7 @@
   </section>
   <section class="mt-4">
     <h3 class="font-primary text-2xl font-bold text-gray-800 mt-6 mb-2">Step 2: Admission Application Form</h3>
-    <p>To allow ample time to arrange your respective Australian Visa, we encourage you to apply at the earliest. You can find the <a href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/ABpcZ03eVACUmpsqkooYkxU/Forms?dl=0&preview=Admission+Application+Form.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1" class="text-[var(--color-brand-primary)] underline hover:text-[var(--color-brand-blue-4)] transition-all">Quantum’s Online Application Form</a> or apply through an education agent. Please ensure your application is complete, as missing information may delay processing.</p>
+    <p>To allow ample time to arrange your respective Australian Visa, we encourage you to apply at the earliest. You can find the <a href="/forms/Admission%20Application%20Form.pdf" class="text-[var(--color-brand-primary)] underline hover:text-[var(--color-brand-blue-4)] transition-all">Quantum’s Online Application Form</a> or apply through an education agent. Please ensure your application is complete, as missing information may delay processing.</p>
   </section>
   <section class="mt-4">
     <h3 class="font-primary text-2xl font-bold text-gray-800 mt-6 mb-2">Step 3: Supplementary Documents</h3>
@@ -73,7 +73,8 @@
     <p>We’re thrilled to have you with us! You’re now ready to begin your journey as a Quantum student. Enroll in your classes, connect with classmates, and dive into campus life.</p>
   </section>
   <section class="mt-4">
-    <p>For more Information:<a href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AJ-mqWkT5w00G5w_-L9PFRw/Policies%20and%20Procedures?dl=0&preview=Admission+Policy+and+Procedure.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1" class="italic underline text-brand-primary">Admission Policy and Procedure</a>
+    <p>For more Information:<a href="/policies-and-procedures/Admission%20Policy%20and%20Procedure.pdf" class="italic underline text-brand-primary">Admission Policy and Procedure</a>
 </p>
   </section>
 </div>
+
