--- a/theme/v1/qihe-students/library.html
+++ b/theme/v1/qihe-students/library.html
@@ -24,7 +24,7 @@
       <a href="#" class="text-brand-primary underline hover:text-brand-blue-4 transition-all">Access the E-Library</a>
     </p>
     <p>
-      For more details, see our <a href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AJ-mqWkT5w00G5w_-L9PFRw/Policies%20and%20Procedures?dl=0&e=1&preview=ICT+Services+and+Library+Facilities+Policy.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1" class="text-brand-primary underline hover:text-brand-blue-4 transition-all italic">ICT Services and Library Facilities Policy</a>.
+      For more details, see our <a href="/policies-and-procedures/ICT%20Services%20and%20Library%20Facilities%20Policy.pdf" class="text-brand-primary underline hover:text-brand-blue-4 transition-all italic">ICT Services and Library Facilities Policy</a>.
     </p>
   </div>
 
