--- a/theme/v1.1/course/admissionRequirements.html
+++ b/theme/v1.1/course/admissionRequirements.html
@@ -52,7 +52,7 @@
 
       <p class="mt-4 text-sm text-gray-600">
         For full details, see the
-      <a href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AJ-mqWkT5w00G5w_-L9PFRw/Policies%20and%20Procedures?dl=0&preview=Admission+Policy+and+Procedure.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1" class="italic underline text-brand-primary">Admission Policy and Procedure</a>
+      <a href="/policies-and-procedures/Admission%20Policy%20and%20Procedure.pdf" class="italic underline text-brand-primary">Admission Policy and Procedure</a>
       .
       </p>
     </div>
