--- a/theme/v1.1/student_support/index.html
+++ b/theme/v1.1/student_support/index.html
@@ -19,7 +19,7 @@
         <p class="text-lg text-gray-700 italic mt-6">
           For full details, please refer to the
           <a
-            href="https://www.dropbox.com/scl/fo/ixrq58oyj2yo3ja5g8f9n/AJ-mqWkT5w00G5w_-L9PFRw/Policies%20and%20Procedures?dl=0&e=1&preview=ICT+Services+and+Library+Facilities+Policy.pdf&rlkey=bt8lvdav3k7x6my0f6khqgfsg&subfolder_nav_tracking=1"
+            href="/policies-and-procedures/ICT%20Services%20and%20Library%20Facilities%20Policy.pdf"
             target="_blank"
             class="text-blue-600 underline hover:text-blue-800 transition-all italic"
           >
